syntax = "proto3";

option csharp_namespace = "UserServiceRpc";

package userServiceRpc;

service UserService {
  rpc CreateUserCreatedCourseRecord(CreateCourseRequest) returns (CreateRecordResponse);
  rpc DeleteCourseRecords(DeleteCourseRecordRequest) returns (DeleteCourseRecordResponse);
}

message CreateCourseRequest {
  string email = 1;
  string course_id = 2;
}

message CreateRecordResponse {
  string record_id = 1;
}

message DeleteCourseRecordRequest {
  string course_id = 1;
}

message DeleteCourseRecordResponse {
  bool result = 1;
}
